fix: fixed url in readme file for demo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dropdown",
-  "homepage": "https://chernyshevaNetology.github.com/dropdown-menu",
+  "homepage": "https://chernyshevanetology.github.io/dropdown-menu/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
